WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309103
[Site Isolation] Partially fix WKNavigation.Frames
https://bugs.webkit.org/show_bug.cgi?id=309103
Summary
[Site Isolation] Partially fix WKNavigation.Frames
Sihui Liu
Reported
2026-03-03 14:09:55 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-03 14:15:26 PST
<
rdar://problem/171660809
>
Sihui Liu
Comment 2
2026-03-03 14:49:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59833
EWS
Comment 3
2026-03-05 20:18:07 PST
Committed
308774@main
(e95d3cb282b5): <
https://commits.webkit.org/308774@main
> Reviewed commits have been landed. Closing PR #59833 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug