Tools/TestWebKitAPI/Tests/WebKitCocoa/Navigation.mm
@@ -180,6 +180,13 @@ TEST(WKNavigation, UserAgentAndAccept)
     TestWebKitAPI::Util::run(&done);
 }
 
+struct ExpectedStrings {
+    const char* callback;
+    const char* frameRequest;
+    const char* frameSecurityOriginHost;
+    const char* request;
+};
+
 @interface FrameNavigationDelegate : NSObject <WKNavigationDelegate>
 - (void)waitForNavigations:(size_t)count;
 - (void)clearState;
@@ -193,6 +200,23 @@ TEST(WKNavigation, UserAgentAndAccept)
     RetainPtr<NSMutableArray<WKFrameInfo *>> _frames;
     RetainPtr<NSMutableArray<NSString *>> _callbacks;
     size_t _navigationCount;
+}
+
+- (void)validateCallbacks:(const Vector<ExpectedStrings>&)expectedVector
+{
+    EXPECT_EQ(_requests.get().count, expectedVector.size());
+    EXPECT_EQ(_frames.get().count, expectedVector.size());
+    EXPECT_EQ(_callbacks.get().count, expectedVector.size());
+
+    auto validateCallback = [] (NSString *callback, WKFrameInfo *frame, NSURLRequest *request, const ExpectedStrings& expected) {
+        EXPECT_WK_STREQ(callback, expected.callback);
+        EXPECT_WK_STREQ(frame.request.URL.absoluteString, expected.frameRequest);
+        EXPECT_WK_STREQ(frame.securityOrigin.host, expected.frameSecurityOriginHost);
+        EXPECT_WK_STREQ(request.URL.absoluteString, expected.request);
+    };
+
+    for (size_t i = 0; i < expectedVector.size(); ++i)
+        validateCallback(_callbacks.get()[i], _frames.get()[i], _requests.get()[i], expectedVector[i]);
 }
 
 - (void)waitForNavigations:(size_t)expectedNavigationCount
@@ -276,6 +300,11 @@ TEST(WKNavigation, UserAgentAndAccept)
     _navigationCount++;
 }
 
+- (void)webView:(WKWebView *)webView didReceiveAuthenticationChallenge:(NSURLAuthenticationChallenge *)challenge completionHandler:(void (^)(NSURLSessionAuthChallengeDisposition, NSURLCredential *))completionHandler
+{
+    completionHandler(NSURLSessionAuthChallengeUseCredential, [NSURLCredential credentialForTrust:challenge.protectionSpace.serverTrust]);
+}
+
 @end
 
 TEST(WKNavigation, Frames)
@@ -307,13 +336,6 @@ TEST(WKNavigation, Frames)
     webView.get().navigationDelegate = delegate.get();
     [webView loadRequest:[NSURLRequest requestWithURL:[NSURL URLWithString:@"frame://host1/"]]];
     [delegate waitForNavigations:3];
-
-    struct ExpectedStrings {
-        const char* callback;
-        const char* frameRequest;
-        const char* frameSecurityOriginHost;
-        const char* request;
-    };
 
     auto checkCallbacks = [delegate] (Vector<ExpectedStrings> expectedVector) {
         NSArray<NSURLRequest *> *requests = delegate.get().requests;
@@ -382,8 +404,7 @@ TEST(WKNavigation, Frames)
     [delegate clearState];
     [webView loadRequest:[NSURLRequest requestWithURL:[NSURL URLWithString:@"frame://host4/"]]];
     [delegate waitForNavigations:1];
-
-    checkCallbacks({
+    [delegate validateCallbacks: {
         {
             "start provisional",
             "frame://host1/",
@@ -400,7 +421,126 @@ TEST(WKNavigation, Frames)
             "host4",
             "frame://host4/"
         }
-    });
+    }];
+}
+
+TEST(WKNavigation, FramesWithHTTPSNavigation)
+{
+    TestWebKitAPI::HTTPServer server({
+        { "/main"_s, { "<iframe src='https://frame.com/navigate'></iframe>"_s } },
+        { "/navigate"_s, { "<script>function navigate() { window.location='https://frame2.com/frame' }</script><body onload='navigate()'></body>"_s } },
+        { "/frame"_s, { "hi"_s } },
+    }, TestWebKitAPI::HTTPServer::Protocol::HttpsProxy);
+
+    RetainPtr configuration = server.httpsProxyConfiguration();
+    RetainPtr webView = adoptNS([[WKWebView alloc] initWithFrame:NSMakeRect(0, 0, 800, 600) configuration:configuration.get()]);
+    RetainPtr delegate = adoptNS([FrameNavigationDelegate new]);
+    webView.get().navigationDelegate = delegate.get();
+    [webView loadRequest:[NSURLRequest requestWithURL:[NSURL URLWithString:@"https://example.com/main"]]];
+
+    // Three navigation completions: main-frame finish, frame.com/navigate finish, and frame2.com/frame finish.
+    [delegate waitForNavigations:3];
+    // FIXME: Site Isolation has a bug that initial document security origin will be set to null instead of inheriting from parent.
+    const char* initialIframeDocumentSecurityOrigin = isSiteIsolationEnabled(webView.get()) ? "" : "example.com";
+    [delegate validateCallbacks: {
+        {
+            "start provisional",
+            "",
+            "",
+            "https://example.com/main"
+        }, {
+            "commit",
+            "https://example.com/main",
+            "example.com",
+            "https://example.com/main"
+        }, {
+            "start provisional",
+            "",
+            initialIframeDocumentSecurityOrigin,
+            "https://frame.com/navigate"
+        }, {
+            "commit",
+            "https://frame.com/navigate",
+            "frame.com",
+            "https://frame.com/navigate"
+        }, {
+            "finish",
+            "https://frame.com/navigate",
+            "frame.com",
+            "https://frame.com/navigate"
+        }, {
+            "finish",
+            "https://example.com/main",
+            "example.com",
+            "https://example.com/main"
+        }, {
+            "start provisional",
+            "https://frame.com/navigate",
+            "frame.com",
+            "https://frame2.com/frame"
+        }, {
+            "commit",
+            "https://frame2.com/frame",
+            "frame2.com",
+            "https://frame2.com/frame"
+        }, {
+            "finish",
+            "https://frame2.com/frame",
+            "frame2.com",
+            "https://frame2.com/frame"
+        }
+    }];
+}
+
+TEST(WKNavigation, FramesWithLoadingError)
+{
+    TestWebKitAPI::HTTPServer server({
+        { "/main"_s, { "<iframe src='frameswitherror://frame'></iframe>"_s } },
+    }, TestWebKitAPI::HTTPServer::Protocol::HttpsProxy);
+
+    RetainPtr configuration = server.httpsProxyConfiguration();
+    RetainPtr schemeHandler = adoptNS([TestURLSchemeHandler new]);
+    [schemeHandler setStartURLSchemeTaskHandler:^(WKWebView *, id<WKURLSchemeTask> task) {
+        [task didFailWithError:[NSError errorWithDomain:@"testErrorDomain" code:42 userInfo:nil]];
+    }];
+    [configuration setURLSchemeHandler:schemeHandler.get() forURLScheme:@"frameswitherror"];
+    RetainPtr webView = adoptNS([[WKWebView alloc] initWithFrame:NSMakeRect(0, 0, 800, 600) configuration:configuration.get()]);
+    RetainPtr delegate = adoptNS([FrameNavigationDelegate new]);
+    [webView setNavigationDelegate:delegate.get()];
+    [webView loadRequest:[NSURLRequest requestWithURL:[NSURL URLWithString:@"https://example.com/main"]]];
+
+    // Three navigation completions: main-frame finish, frame.com/frame finish.
+    [delegate waitForNavigations:2];
+    // FIXME: Site Isolation has a bug that initial document security origin will be set to null instead of inheriting from parent.
+    const char* initialIframeDocumentSecurityOrigin = isSiteIsolationEnabled(webView.get()) ? "" : "example.com";
+    [delegate validateCallbacks: {
+        {
+            "start provisional",
+            "",
+            "",
+            "https://example.com/main"
+        }, {
+            "commit",
+            "https://example.com/main",
+            "example.com",
+            "https://example.com/main"
+        }, {
+            "start provisional",
+            "",
+            initialIframeDocumentSecurityOrigin,
+            "frameswitherror://frame"
+        }, {
+            "fail provisional",
+            "",
+            initialIframeDocumentSecurityOrigin,
+            "frameswitherror://frame"
+        }, {
+            "finish",
+            "https://example.com/main",
+            "example.com",
+            "https://example.com/main"
+        }
+    }];
 }
 
 @interface DidFailProvisionalNavigationDelegate : NSObject <WKNavigationDelegate>
